--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -162,6 +162,10 @@ a:focus, a:hover {
 	display: inline-flex !important;
         list-style-type: none !important;
 }
+.colorbg a{
+background: #bbb;
+color: black;    
+}
 
 @media only screen and (max-width: 500px) {
     .hide{
